biocomplexity/templates/pepita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pepita-service
  namespace: biocomplexity
spec:
  selector:
    app: pepita
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
